--- a/packages/core/src/components/table/table.scss
+++ b/packages/core/src/components/table/table.scss
@@ -10,11 +10,12 @@
 :host {
   --_dt-modal-inline-size: 100dvi;
   --_dt-modal-margin: 0;
-  --_dt-modal-dialog-inline-size: calc(100% - 2rem);
+  --_dt-modal-dialog-inline-size: 100%;
   --_dt-modal-dialog-margin-block-start: 1rem;
   --_dt-modal-dialog-margin-inline-start: 1rem;
   --_dt-modal-dialog-margin-inline-end: 1rem;
-  --_dt-modal-body-max-block-size: calc(100vh - #{(2 * units.$u2) + (units.$u6 + units.$u4)} - 1.5em - 2rem);
+  --_dt-modal-body-max-block-size: calc(100vh - 100px);
+  --_dt-modal-header-close-btn: 16px;
 
   display: block;
   margin-block-end: units.$u3;
